test/end-to-end/compile-errors/variant-member-purity.crow
main void()
	info log "done"

v variant
m variant-member(v, nat mut[])
